# CG-Intro

./: .gitignore  README.md
02Rasterization/: CMakeLists.txt  Ellipse.sln  Ellipse.vcxproj  Ellipse.vcxproj.filters  Geometry.cpp  Geometry.h  Rasterization.md  ellipse.cpp  ellipse.h  ellipse.py  graphics.cpp  graphics.h  ppm.cpp  test.ppm
03OpenGL/: CMakeLists.txt  main.cpp
05SkyCrawling/: CMakeLists.txt  README.md  Report.md
05SkyCrawling/include/: Astroid.h  geometry.h
05SkyCrawling/src/: Astroid.cpp  SolarSystem.cpp  Solar_Material.cpp  gallery.cpp  geometry.cpp  main.cpp
11UFO/: CMakeLists.txt  README.md
11UFO/include/: Astroid.h  Model.h  Texture.h  geometry.h
11UFO/src/: Astroid.cpp  Model.cpp  Texture.cpp  UFO.cpp  geometry.cpp  main.cpp
